--- a/PacMan_v6.2/nbproject/private/private.properties
+++ b/PacMan_v6.2/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/Users/Kevin/Library/Application Support/NetBeans/8.1/build.properties
+user.properties.file=C:\\Users\\ethiek2\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
